--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,137 @@
 <resources>
-    <string name="app_name">Family Cash</string>
+    <string name="app_name">Деньги</string>
     <string name="action_settings">Settings</string>
     <string name="dialog_action_ok">OK</string>
     <string name="dialog_action_cancel">Cancel</string>
     <string name="dialog_error_title">Sorry</string>
-    <string name="empty_ribots">There aren\'t any ribots</string>
-    <string name="error_loading_ribots">There was a problem loading the ribots</string>
+    <string name="empty_accounts">There aren\'t any accounts</string>
+    <string name="error_loading_accounts">There was a problem loading the accounts</string>
+    <string name="edit">Edit</string>
+    <string name="microphone">Microphone</string>
+    <string name="remove">Remove</string>
+    <string name="checked">Checked</string>
+    <string name="search_hint">Company name</string>
+    <string name="seetings">Settings</string>
+    <string name="share">Share</string>
+    <string name="donate">Donate</string>
+    <string name="ratee_app">Rate app</string>
+    <string name="add_price_alert">Add price alert</string>
+    <string name="title_activity_activity_details">ActivityDetails</string>
+    <string name="sliding_menu">Sliding menu</string>
+    <string name="exit">Exit</string>
+    <string name="share_text">Stock Quotes - Watch your stocks in material design way!</string>
+    <string name="from">from</string>
+    <string name="drag_drop">   Drag &amp; Drop</string>
+    <string name="sort_ab">Sort alphabetically</string>
+    <string name="stock_details">Stock details</string>
+    <string name="stock_news">News</string>
+    <string name="week">Week</string>
+    <string name="volume">Volume</string>
+    <string name="open">Open</string>
+    <string name="hight">Hight</string>
+    <string name="low">Low</string>
+    <string name="prev_close">Prev Close</string>
+    <string name="eps">EPS</string>
+    <string name="exchange">Exchange</string>
+    <string name="last_trade">Last trade</string>
+    <string name="title_activity_activity_webview">ActivityWebview</string>
+    <string name="grpah_week">week</string>
+    <string name="grpah_month">month</string>
+    <string name="grpah_year">year</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="open_in_browser">Open in browser</string>
+    <string name="github">GitHub</string>
+    <string name="copyright">Copyright</string>
+    <string name="welcome">Welcome</string>
+    <string name="welcome_message">Tiny Stock Quotes is tiny app which allows you follow any NASDAQ stock in simple and comfortable way. It is totally free, open-source and contains no advertising. App is still in beta, so I am open to any feedback.</string>
+    <string name="feedback">Feedback</string>
+    <string name="send_email">Send Email</string>
+    <string name="drawer_open">Drawer open</string>
+    <string name="drawer_close">Drawer close</string>
+    <string name="drawer_item_accounts">Счета</string>
+    <string name="drawer_item_trans">Операции</string>
+    <string name="drawer_item_settings">Настройки</string>
+    <string name="drawer_item_about">О программе</string>
+    <string name="drawer_item_helppart">Помощь</string>
+    <string name="activity_main_title">Счета</string>
+    <string name="drawer_item_exit">Выход</string>
+    <string name="title_activity_settings">Настройки</string>
+    <string name="title_activity_about">О программе</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string-array name="pref_example_list_titles">
+        <item>Always</item>
+        <item>When possible</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_example_list_values">
+        <item>1</item>
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value" />
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
+
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
 </resources>
